--- a/s/struts2/s2-devMode/Dockerfile
+++ b/s/struts2/s2-devMode/Dockerfile
@@ -1,10 +1,14 @@
 # S2-devMode Vul Demo
-FROM medicean/vulapps:s_struts2_s2-037
+FROM tomcat:8-jre8
 MAINTAINER Medici.Yan@Gmail.com
 
+WORKDIR /tmp
+
+RUN set -ex \
+    && rm -rf /usr/local/tomcat/webapps/* \
+    && chmod a+x /usr/local/tomcat/bin/*.sh
+
+COPY src/struts2-rest.war /usr/local/tomcat/webapps/ROOT.war
 EXPOSE 8080
 
 CMD ["/usr/local/tomcat/bin/catalina.sh", "run"]
-
-# 1. docker build .
-# 2. docker run -d -p 80:8080 xxxxxx
