--- a/w/wordpress/3/Dockerfile
+++ b/w/wordpress/3/Dockerfile
@@ -9,7 +9,8 @@ RUN set -x \
     && /etc/init.d/mysql start \
     && unzip -x /tmp/WordPress-Plugin-CYSTEME-Finder-1.3.zip -d /var/www/html/wp-content/plugins/ \
     && chown -R www-data:www-data /var/www/html/ \
-    && wp --path=/var/www/html/ plugin activate cysteme-finder --allow-root 
+    && wp --path=/var/www/html/ plugin activate cysteme-finder --allow-root \
+    && rm -rf /tmp/*
 
 EXPOSE 80
 CMD ["/start.sh"]
