(Update Tools: Hawkeye) 更新配置，增加邮件端口设置 已解决SMTP SSL问题

--- a/tools/hawkeye/src/config.ini
+++ b/tools/hawkeye/src/config.ini
@@ -21,5 +21,6 @@ FILENAME = //*[@id="code_search_results"]/div[1]/div[{}]/div[1]/a[2]
 [Notice]
 ENABLE = 0
 MAIL_SERVER = smtp.qq.com
+MAIL_PORT = 587
 FROM = mailfrom
 PASSWORD = mailpassword
