--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: VulApps
 description: VulApps 旨在快速搭建各种漏洞环境与安全工具环境，启动无需其它步骤，即开即用。
 # baseurl: "/" # the subpath of your site, e.g. /blog
-url: "http://localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+url: "http://vulapps.evalbug.com" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: VulApps
